Fixes Screen Margin jump when <1300, CSStweaks

--- a/_sass/uknow.scss
+++ b/_sass/uknow.scss
@@ -226,13 +226,13 @@ pre {
 .excerpt {
 	margin: 0;
 	font-size: .9em;
-	color: #999999; }
+	color: #888888; }
 
 .intro {
 	font-family: "Roboto Slab", serif;
 	font-size: 1.2em;
 	font-weight: lighter;
-	color: #999999; }
+	color: #888888; }
 
 .block-heading {
 	display: inline;
@@ -269,11 +269,11 @@ pre {
 .content-wrapper {
 	z-index: 800;
 	width: 60%;
-	max-width: 800px;
-	margin-left: 40%; }
+	max-width: 900px;
+	margin-left: 25%; }
 
 .content-wrapper__inner {
-	margin: 0 10%;
+	margin: 0 	10%;
 	padding: 50px 0; }
 
 .footer {
@@ -506,8 +506,8 @@ hr {
 		border-color: #217fd2; }
 
 .btn-tertiary {
-	border-color: #999999;
-	color: #999999; }
+	border-color: #888888;
+	color: #888888; }
 	.btn-tertiary:hover {
 		color: #737373;
 		border-color: #737373; }
@@ -590,7 +590,7 @@ nav {
   padding: 10px;
   margin: 0;
 	font-size: .8em;
-	color: #999999; }
+	color: #888888; }
 
 .pagination__newer {
 	margin-right: 1em; }
@@ -745,13 +745,6 @@ input[type="tel"] {
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 
-@media all and (min-width: 1300px) {
-	.content-wrapper {
-		margin-left: 25%; }
-}
-/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-/*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
-
 @media all and (max-width: 1100px) {
 	.panel-cover__logo {
 		width: 70px; }
@@ -765,6 +758,9 @@ input[type="tel"] {
 	.panel-cover__description {
 		margin: 0 10px;
 		font-size: .9em; }
+
+	.panel-cover__divider {
+		margin: .5rem auto;}
 
 	.navigation--social {
 		margin-top: 5px;
